--- a/public/system/views/header.html
+++ b/public/system/views/header.html
@@ -2,7 +2,6 @@
   <div class="logo pull-left">
     <a class="navbar-brand" ui-sref="home" mean-token="'site-title'">MEAN</a>
   </div>
-
   <div class="left pull-left">
     <ul class="navbar-nav nav">
       <li data-ng-repeat="item in menus.main" ui-route="/{{item.link}}" ng-class="{active: $uiRoute}">
@@ -21,6 +20,8 @@
         </li>
         <li class="divider-vertical"></li>
         <li><a ui-sref='auth.login'>Login</a>
+        </li>
+        <li><a ui-sref='create_item'>创建册子</a>
         </li>
     </ul>
     <ul class="navbar-nav nav" data-ng-show="global.authenticated">
