1 不能redirect的原因是由于public的item_input_controller里面对于success的情况没有处理 这样虽然server端redirect成功了，但是客户端没有跳转

--- a/public/system/views/item_input.html
+++ b/public/system/views/item_input.html
@@ -12,12 +12,15 @@
             <div class="col-md-8">
                 
                 <select class="form-control" ng-model="item.parent" >
-                    <option value="">-- 请选择 --</option>
+                  <!--   <option value="">-- 请选择 --</option>
                     {% if result %}
                         {% for res in result %}
                             <option value="{{res}}">{{res.name}}</option>
                         {% endfor %}
-                    {% endif %}
+                    {% endif %} -->
+                    <option ng-repeat="cat in categorys" value="{{cat._id}}">
+                        {{cat.name}}
+                     </option>
                 </select>
              </div>
         </div>
