--- a/public/system/views/header.html
+++ b/public/system/views/header.html
@@ -23,7 +23,7 @@
         </li>
         <li><a ui-sref='create_item'>创建册子</a>
         </li>
-        <li><a ui-sref='item_list'>册子列表</a>
+        <li><a ui-sref='albums'>册子列表</a>
         </li>
     </ul>
     <ul class="navbar-nav nav" data-ng-show="global.authenticated">
