--- a/public/system/views/item_list.html
+++ b/public/system/views/item_list.html
@@ -19,7 +19,7 @@
             class="thumbnail album-listing">
 
           <a href="/albums/6" ui-sref='view_album' class="thumb" ><img ng-src="{{album.imageUrl}}"></a>
-          <a ui-sref='detail({ albumId: album._id})'>{{album.name}} </a>
+          <a ui-sref='detail({ albumId: album._id, fuck: "xxxx"})'>{{album.name}} </a>
            <!-- <a href="/albums/8" >{{album.name}}</a> -->
           <p>{{album.des}}</p>
         </li>
