测试css的选择器中的>

--- a/public/system/views/test.html
+++ b/public/system/views/test.html
@@ -1,5 +1,40 @@
-<div>
-	<<script type="text/javascript">
-		
-	</script>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+	<link rel="stylesheet" type="text/css" href="/public/system/assets/css/common.css">
+	<style type="text/css">
+		.account {
+	    	text-align:right;
+		}
+		.account >span {
+	    	text-align:right;
+	    	background:#ddd;
+		}
+	</style>
+</head>
+<body>
+	<div class="account">
+		<span>dady i coming!</span>
+		<div>
+			<ul>
+				<li>fuck</li>
+			</ul>
+		</div>
+		<p >
+			this is p, how are you today!
+			my good friends!!
+			
+			<span>this is span1</span>
+			<br>
+			
+			<br>
+			go friends! buy sipan
+			<br>
+			<span>this is span2</span>
+		</p>
+	</div>
+</body>
+</html>
+
+
