--- a/public/system/views/item_input.html
+++ b/public/system/views/item_input.html
@@ -32,7 +32,14 @@
                  <span class="help-block">请用英文逗号进行分隔</span>
             </div>
         </div>
-          <div class="form-group">
+         <div class="form-group">
+            <label class="col-md-2 control-label" for="name">价格：</label>
+            <div class="col-md-8">
+                <input id="price" class="form-control" type="number" name="price" placeholder="Full Name" ng-model="item.price" />
+                 <span class="help-block">默认为0</span>
+            </div>
+        </div>
+        <div class="form-group">
             <label class="col-md-2 control-label" for="name">备注：</label>
             <div class="col-md-8">
                 <textarea id="name" class="form-control" ng-model="item.des" >
