--- a/public/system/views/item_input.html
+++ b/public/system/views/item_input.html
@@ -11,7 +11,7 @@
             <label class="col-md-2 control-label" for="name">分类：</label>
             <div class="col-md-8">
                 
-                <select class="form-control" ng-model="item.parent" >
+                <select class="form-control" ng-model="item.category_id" selectedIndex={{item.cat_index}}>
                   <!--   <option value="">-- 请选择 --</option>
                     {% if result %}
                         {% for res in result %}
@@ -35,7 +35,7 @@
          <div class="form-group">
             <label class="col-md-2 control-label" for="name">价格：</label>
             <div class="col-md-8">
-                <input id="price" class="form-control" type="number" name="price" placeholder="Full Name" ng-model="item.price" />
+                <input id="price" class="form-control" type="number" name="price" placeholder="价格" ng-model="item.price" />
                  <span class="help-block">默认为0</span>
             </div>
         </div>
