--- a/public/system/views/item_list.html
+++ b/public/system/views/item_list.html
@@ -18,10 +18,12 @@
         <li ng-repeat="album in albums | filter:query | orderBy:orderProp"
             class="thumbnail album-listing">
 
-          <a href="/albums/6" ui-sref='view_album' class="thumb" ><img ng-src="{{album.imageUrl}}"></a>
+           <img class="thumb" ng-src="{{album.imageUrl}}"></img>
           <a ui-sref='detail({ albumId: album._id, fuck: "xxxx"})'>{{album.name}} </a>
            <!-- <a href="/albums/8" >{{album.name}}</a> -->
           <p>{{album.des}}</p>
+          <button class="btn btn-primary " ng-click="editAlbum(album)">Edit</button>
+           
         </li>
       </ul>
 
