--- a/public/system/views/header.html
+++ b/public/system/views/header.html
@@ -21,10 +21,18 @@
         <li class="divider-vertical"></li>
         <li><a ui-sref='auth.login'>Login</a>
         </li>
-        <li><a ui-sref='create_item'>创建册子</a>
-        </li>
-        <li><a ui-sref='albums'>册子列表</a>
-        </li>
+     
+       <!--  <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                 操 作 菜 单  <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+                  <li><a ui-sref='create_item'>创建册子</a>
+                  </li>
+                   <li><a ui-sref='albums'>册子列表</a>
+                  </li>
+            </ul>
+        </li> -->
     </ul>
     <ul class="navbar-nav nav" data-ng-show="global.authenticated">
         <li class="dropdown">
@@ -36,6 +44,17 @@
                 </li>
             </ul>
         </li>
+        <!--  <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                 操 作 菜 单  <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+                  <li><a ui-sref='create_item'>创建册子</a>
+                  </li>
+                   <li><a ui-sref='albums'>册子列表</a>
+                  </li>
+            </ul>
+        </li> -->
     </ul>
   </div>
 </div>
