--- a/public/system/views/header.html
+++ b/public/system/views/header.html
@@ -44,7 +44,7 @@
                 </li>
             </ul>
         </li>
-        <!--  <li class="dropdown">
+        <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                  操 作 菜 单  <b class="caret"></b>
             </a>
@@ -54,7 +54,7 @@
                    <li><a ui-sref='albums'>册子列表</a>
                   </li>
             </ul>
-        </li> -->
+        </li>
     </ul>
   </div>
 </div>
