这样修改后登录了，就没有自动跳转到loggedin了。 具体可以参考resolve的用法https://github.com/angular-ui/ui-router/wiki#resolve

--- a/public/system/views/test.html
+++ b/public/system/views/test.html
@@ -1,5 +1,4 @@
-<div>
-	<<script type="text/javascript">
-		
-	</script>
-</div>
+<section >
+    <h1 mean-token="'home-default'">This is the home view</h1>
+    <h1 >This is the home f3333k view</h1>
+</section>
