--- a/public/system/views/index.html
+++ b/public/system/views/index.html
@@ -1,3 +1,4 @@
 <section data-ng-controller="IndexController">
     <h1 mean-token="'home-default'">This is the home view</h1>
+    <h1 >This is the home fk view</h1>
 </section>
