添加实体类

--- a/public/system/views/test.html
+++ b/public/system/views/test.html
@@ -1,4 +1,6 @@
 <section >
     <h1 mean-token="'home-default'">This is the home view</h1>
-    <h1 >This is the home f3333k view</h1>
+    <h1 >This is the home 1985 view</h1>
+     <h1 >This is the home 1985 view</h1>
+      <h1 >This is the home 1985 view</h1>
 </section>
