1 添加测试数据 2 添加删除功能

--- a/public/system/views/item_list.html
+++ b/public/system/views/item_list.html
@@ -23,6 +23,7 @@
            <!-- <a href="/albums/8" >{{album.name}}</a> -->
           <p>{{album.des}}</p>
           <button class="btn btn-primary " ng-click="editAlbum(album)">Edit</button>
+          <button class="btn btn-primary " ng-click="remove(album)">remove</button>
           <!--<button class="btn btn-primary " ng-click="favorite(album)">Favorite</button>-->
         </li>
       </ul>
