操作后刷新页面

--- a/public/system/views/header.html
+++ b/public/system/views/header.html
@@ -53,6 +53,10 @@
                   </li>
                    <li><a ui-sref='albums'>册子列表</a>
                   </li>
+                  <li><a href="category/create">创建类目</a>
+                  </li>
+                  <li><a href="category/list">类目列表</a>
+                  </li>
             </ul>
         </li>
     </ul>
